--- a/instagram36.html
+++ b/instagram36.html
@@ -6,6 +6,66 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000730.jpg" title="#babysnub shreddin' the bike lane. #cycling #lovestarfactoryteam #futurecyclist #bicycle #striderbikes #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#babysnub shreddin' the bike lane. #cycling #lovestarfactoryteam #futurecyclist #bicycle #striderbikes #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000730.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000291.jpg" title="#Repost @elliotlovestarbicycles with @repostapp.
+・・・
+Some muddy #lovestarbicyclebags product testing. #handmade #bicyclebag #fatbike #bikechi #bicycle #cycling #framebag #bikepacking #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>fatbikee</h4>
+                              <small>#Repost @elliotlovestarbicycles with @repostapp.
+・・・
+Some muddy #lovestarbicyclebags product testing. #handmade #bicyclebag #fatbike #bikechi #bicycle #cycling #framebag #bikepacking #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000291.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000292.jpg" title="Some muddy #lovestarbicyclebags product testing. #handmade #bicyclebag #fatbike #bikechi #bicycle #cycling #framebag #bikepacking #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Some muddy #lovestarbicyclebags product testing. #handmade #bicyclebag #fatbike #bikechi #bicycle #cycling #framebag #bikepacking #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000292.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000293.jpg" title="#Repost @elliotlovestarbicycles with @repostapp.
+・・・
+Added a custom #lovestarbicyclebags top tube bag to this #bikepacking set up. #fatbike #cyclist #bicycle #cycling #bicyclebag #handmade #framebag #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>fatbikee</h4>
+                              <small>#Repost @elliotlovestarbicycles with @repostapp.
+・・・
+Added a custom #lovestarbicyclebags top tube bag to this #bikepacking set up. #fatbike #cyclist #bicycle #cycling #bicyclebag #handmade #framebag #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000293.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000294.jpg" title="Up close. #lovestarbicyclebags #handmade #bikepacking #framebag #cycling #bikechi #bicycle #fatbike #SewRad" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -211,58 +271,6 @@
                               <small>A couple of #lovestarfactoryteam riders doing some grass hill repeats at the local park. #cycling #cyclocross #cx #bikechi #bicycle #striderbikes #fatbike #adventuredad #futurecyclist #babyGnar #babysnub</small>
                            </div>
                            <img src="../lsphotos/image000738.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000302.jpg" title="Color match test... #bikepacking #framebag #handmade #lovestarbicyclebags #bicyclebag #cycling #fatbike #bicycle #bikechi #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Color match test... #bikepacking #framebag #handmade #lovestarbicyclebags #bicyclebag #cycling #fatbike #bicycle #bikechi #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000302.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000303.jpg" title="#lovestarbicyclebags custom #framebag begins. It's been a while since I made anything for my own bikes...nothing like high contrast stitching to make a bag pop. #handmade #bicycle #bicyclebag #bikepacking #cycling #bikechi #fatbike #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#lovestarbicyclebags custom #framebag begins. It's been a while since I made anything for my own bikes...nothing like high contrast stitching to make a bag pop. #handmade #bicycle #bicyclebag #bikepacking #cycling #bikechi #fatbike #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000303.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000304.jpg" title="#lovestarbicyclebags feed bag prototype. Some adjustments to be made, before a beta test version will be ready, but not a bad first pass. #handmade #bikepacking #cycling #bicyclebag #bicycle #fatbike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#lovestarbicyclebags feed bag prototype. Some adjustments to be made, before a beta test version will be ready, but not a bad first pass. #handmade #bikepacking #cycling #bicyclebag #bicycle #fatbike</small>
-                           </div>
-                           <img src="../lsphotos/image000304.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000305.jpg" title="Prototype #lovestarbicyclebags feed bag. Part of a larger #bikepacking set up, these little bags can be invaluable for bike adventures. This was a first draft, plenty of things to be tweaked, but hoping to have a beta test model ready soon! #handmade #bicycle #bicyclebag #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Prototype #lovestarbicyclebags feed bag. Part of a larger #bikepacking set up, these little bags can be invaluable for bike adventures. This was a first draft, plenty of things to be tweaked, but hoping to have a beta test model ready soon! #handmade #bicycle #bicyclebag #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000305.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
