--- a/instagram38.html
+++ b/instagram38.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000313.jpg" title="Inaugural ride on my new rig.  Thanks @velosmith #parleecycles #envecomposites #rideshimano #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Inaugural ride on my new rig.  Thanks @velosmith #parleecycles #envecomposites #rideshimano #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000313.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000314.jpg" title="2 #lovestarbicyclebags SaddlePacks on the bench for tonight. #handmade #MUSA #cycling #bicycle #bicyclebag #bikepacking #seatbag" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>2 #lovestarbicyclebags SaddlePacks on the bench for tonight. #handmade #MUSA #cycling #bicycle #bicyclebag #bikepacking #seatbag</small>
+                           </div>
+                           <img src="../lsphotos/image000314.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000748.jpg" title="One sleeping. One singing at the top of her lungs. #adventuredad #cycling #cyclist #dadlife #bicycle #thulechariot #bikechi #lovestarfactoryteam #" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>One sleeping. One singing at the top of her lungs. #adventuredad #cycling #cyclist #dadlife #bicycle #thulechariot #bikechi #lovestarfactoryteam #</small>
+                           </div>
+                           <img src="../lsphotos/image000748.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000749.jpg" title="#LoveStarFactoryTeam @ddave12000" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>#LoveStarFactoryTeam @ddave12000</small>
+                           </div>
+                           <img src="../lsphotos/image000749.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000750.jpg" title="Gritty and wet today. Shoe/Sock game was strong, albeit dirty. #cycling #bicycle #bikechi #lovestarfactoryteam #nobadweather" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>I think Billy Idol said it best: "nice day for... bike riding..." Or something like that. #lovestarbicyclebags #bikechi #itsspringagain</small>
                            </div>
                            <img src="../lsphotos/image000325.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000326.jpg" title="Some classic grey and black for this #lovestarbicyclebags SaddlePack. Final stock project for a little while. Starting in on a big custom project. #handmade #cycling #bicycle #bikepacking #bikechi #bicyclebag #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Some classic grey and black for this #lovestarbicyclebags SaddlePack. Final stock project for a little while. Starting in on a big custom project. #handmade #cycling #bicycle #bikepacking #bikechi #bicyclebag #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000326.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000327.jpg" title="Smiles for miles. #babysnub #futurecyclist #championsystem #striderbikes #Lovestarbicyclebags #cycling #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Smiles for miles. #babysnub #futurecyclist #championsystem #striderbikes #Lovestarbicyclebags #cycling #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000327.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000328.jpg" title="The youngest member of Lovestar Factory Team dropping in on the technical section of the train station ramp. #futurecyclist #striderbikes #championsystem #evanston #cycling #Lovestarbicyclebags #lilShredder #babysnub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>The youngest member of Lovestar Factory Team dropping in on the technical section of the train station ramp. #futurecyclist #striderbikes #championsystem #evanston #cycling #Lovestarbicyclebags #lilShredder #babysnub</small>
-                           </div>
-                           <img src="../lsphotos/image000328.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000329.jpg" title="Finished up a flashy #Lovestarbicyclebags SaddlePack . Made this one to match a Lovestar Factory Team rider's  framebag. #handmade #bikepacking #bicycle #bicyclebag #cycling #custom #bikechi #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a flashy #Lovestarbicyclebags SaddlePack . Made this one to match a Lovestar Factory Team rider's  framebag. #handmade #bikepacking #bicycle #bicyclebag #cycling #custom #bikechi #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000329.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
