--- a/instagram39.html
+++ b/instagram39.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000326.jpg" title="Some classic grey and black for this #lovestarbicyclebags SaddlePack. Final stock project for a little while. Starting in on a big custom project. #handmade #cycling #bicycle #bikepacking #bikechi #bicyclebag #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Some classic grey and black for this #lovestarbicyclebags SaddlePack. Final stock project for a little while. Starting in on a big custom project. #handmade #cycling #bicycle #bikepacking #bikechi #bicyclebag #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000326.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000327.jpg" title="Smiles for miles. #babysnub #futurecyclist #championsystem #striderbikes #Lovestarbicyclebags #cycling #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Smiles for miles. #babysnub #futurecyclist #championsystem #striderbikes #Lovestarbicyclebags #cycling #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000327.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000328.jpg" title="The youngest member of Lovestar Factory Team dropping in on the technical section of the train station ramp. #futurecyclist #striderbikes #championsystem #evanston #cycling #Lovestarbicyclebags #lilShredder #babysnub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>The youngest member of Lovestar Factory Team dropping in on the technical section of the train station ramp. #futurecyclist #striderbikes #championsystem #evanston #cycling #Lovestarbicyclebags #lilShredder #babysnub</small>
+                           </div>
+                           <img src="../lsphotos/image000328.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000329.jpg" title="Finished up a flashy #Lovestarbicyclebags SaddlePack . Made this one to match a Lovestar Factory Team rider's  framebag. #handmade #bikepacking #bicycle #bicyclebag #cycling #custom #bikechi #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a flashy #Lovestarbicyclebags SaddlePack . Made this one to match a Lovestar Factory Team rider's  framebag. #handmade #bikepacking #bicycle #bicyclebag #cycling #custom #bikechi #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000329.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000330.jpg" title="Searching through cross race photos from this past year. Came across this gem from #snowymountainphotography check him out! #lovestarbicyclebags #cyclocross #cx #barriers #moots #championsystem #bikechi #cycling #bicycle" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>@agonz21 crushing ravine climbs and taking names. #lovestarbicyclebags #cycling #cyclocross #cx #bicycle #bikechi #barryroubaix</small>
                            </div>
                            <img src="../lsphotos/image000343.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000344.jpg" title="Lovestar Factory Team cramming in some hill repeats before Barry Roubaix. #lovestarbicyclebags #cycling #barryroubaix #cx #cyclocross #gravel #gravelgrinder #bicycle #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lovestar Factory Team cramming in some hill repeats before Barry Roubaix. #lovestarbicyclebags #cycling #barryroubaix #cx #cyclocross #gravel #gravelgrinder #bicycle #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000344.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000345.jpg" title="Keeping it tight. Saddle bags shouldn't move. #lovestarbicyclebags #handmade #custom #bicyclebag #seatbag #bicycle #cycling #bikepacking #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Keeping it tight. Saddle bags shouldn't move. #lovestarbicyclebags #handmade #custom #bicyclebag #seatbag #bicycle #cycling #bikepacking #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000345.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000346.jpg" title="Finished up a snazzy black and red #Lovestarbicyclebags Saddle Pack. Shipping out to a customer this afternoon. Amazing what you can accomplish when both kids nap at the same time. #handmade #bikepacking #cycling #bicycle #bicyclebag #bikechi #dadlife #seatbag #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a snazzy black and red #Lovestarbicyclebags Saddle Pack. Shipping out to a customer this afternoon. Amazing what you can accomplish when both kids nap at the same time. #handmade #bikepacking #cycling #bicycle #bicyclebag #bikechi #dadlife #seatbag #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000346.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000347.jpg" title="Night ride gathering. #lovestarbicyclebags #cycling #nightride #neverabadTimetoRide #bicycle #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Night ride gathering. #lovestarbicyclebags #cycling #nightride #neverabadTimetoRide #bicycle #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000347.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
