--- a/instagram12.html
+++ b/instagram12.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000761.jpg" title="Morning suffer session. #cycling #bicycle #rollers #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Morning suffer session. #cycling #bicycle #rollers #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000761.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000760.jpg" title="Evening rides - bright glasses. #cycling #bicycle #bikechi #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Evening rides - bright glasses. #cycling #bicycle #bikechi #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000760.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000759.jpg" title="Fun Friday Frío ride with a warm stop at @backlotcoffee #lovestarraceclub  #bluebikeclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Fun Friday Frío ride with a warm stop at @backlotcoffee #lovestarraceclub  #bluebikeclub</small>
+                           </div>
+                           <img src="../lsphotos/image000759.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000758.jpg" title="Birthday bike needs a custom color-matched #LovestarBicycleBags seat bag. #handmade #bicycle #cycling #dadlife #clearybikes" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Birthday bike needs a custom color-matched #LovestarBicycleBags seat bag. #handmade #bicycle #cycling #dadlife #clearybikes</small>
+                           </div>
+                           <img src="../lsphotos/image000758.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000001.jpg" title="Cold #squad #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>oliviabeaty</h4>
@@ -207,58 +259,6 @@
                               <small>Post race bike cleaning time. #cycling #cyclocross #cx #bicycle #LovestarRaceClub</small>
                            </div>
                            <img src="../lsphotos/image000019.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000541.jpg" title="Taking the top spot for riders under two 😊 #cyclocrosschicago #cycling #firstrace #adorablegrandson #bike #lovestarfactoryteam #youngestrider #thiskidlovestoride #happyday #fun" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Taking the top spot for riders under two 😊 #cyclocrosschicago #cycling #firstrace #adorablegrandson #bike #lovestarfactoryteam #youngestrider #thiskidlovestoride #happyday #fun</small>
-                           </div>
-                           <img src="../lsphotos/image000541.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000089.jpg" title="Great race today Lovestar Factory Team!!! #cyclocrosschicago #cycling #lovestarfactoryteam #cyclocross #lovestarbicyclebags #lovestar" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Great race today Lovestar Factory Team!!! #cyclocrosschicago #cycling #lovestarfactoryteam #cyclocross #lovestarbicyclebags #lovestar</small>
-                           </div>
-                           <img src="../lsphotos/image000089.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000090.jpg" title="First race. Done. So happy. So proud. #firstrace #cyclocrosschicago #bike #lovestarfactoryteam #youngest #elliotlovestarbicycles #racingteam #lovestarbicyclebags #prouddaddy #thislittleguylovestoride" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>First race. Done. So happy. So proud. #firstrace #cyclocrosschicago #bike #lovestarfactoryteam #youngest #elliotlovestarbicycles #racingteam #lovestarbicyclebags #prouddaddy #thislittleguylovestoride</small>
-                           </div>
-                           <img src="../lsphotos/image000090.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000091.jpg" title="First race. Puddles were the highlight! #firstrace #cyclocrosschicago #lovestarfactoryteam #youngestrider #cycling #bike #elliotlovestarbicycle #lovestarbicyclebags #dadisproud" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>First race. Puddles were the highlight! #firstrace #cyclocrosschicago #lovestarfactoryteam #youngestrider #cycling #bike #elliotlovestarbicycle #lovestarbicyclebags #dadisproud</small>
-                           </div>
-                           <img src="../lsphotos/image000091.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
