--- a/instagram19.html
+++ b/instagram19.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000567.jpg" title="Finish fuel. 161 in the books and just 46 left to go #lovestarfactoryteam #crushgravel #dk200" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Finish fuel. 161 in the books and just 46 left to go #lovestarfactoryteam #crushgravel #dk200</small>
+                           </div>
+                           <img src="../lsphotos/image000567.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000568.jpg" title="Taking a rest at the 1/2 way point. 102 down, 104 to go! #lovestarfactoryteam #crushgravel #dk200" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Taking a rest at the 1/2 way point. 102 down, 104 to go! #lovestarfactoryteam #crushgravel #dk200</small>
+                           </div>
+                           <img src="../lsphotos/image000568.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000569.jpg" title="1/2 way through leg one and feeling great. We got our first flat unfortunately so an unplanned pit stop makes for a photo op. #lovestarfactoryteam #crushgravel #dk200" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>1/2 way through leg one and feeling great. We got our first flat unfortunately so an unplanned pit stop makes for a photo op. #lovestarfactoryteam #crushgravel #dk200</small>
+                           </div>
+                           <img src="../lsphotos/image000569.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000540.jpg" title="#dirtykanza200 start line! #cycling #bicycle #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#dirtykanza200 start line! #cycling #bicycle #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000540.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000570.jpg" title="Out for a spin this morning, and look who catches up with me while crushing some morning miles... #cycling #bicycle #lovestarfactoryteam #bikechi" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Fun times somewhere near mile 50 at #almanzo100 with Team Lovestar #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000131.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000535.jpg" title="Crushing gravel. #Almanzo100 #lovestarfactoryteam #cycling #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Crushing gravel. #Almanzo100 #lovestarfactoryteam #cycling #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000535.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000577.jpg" title="Awesome day for Team Lovestar today at the #almanzo100. We all started together and all finished together. So proud of the crew!! #lovestarfactoryteam #superx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Awesome day for Team Lovestar today at the #almanzo100. We all started together and all finished together. So proud of the crew!! #lovestarfactoryteam #superx</small>
-                           </div>
-                           <img src="../lsphotos/image000577.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000578.jpg" title="Had a great day crushing 100 miles of gravel at #Almanzo100 with the #LovestarFactoryTeam PC: @agonz21" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>Had a great day crushing 100 miles of gravel at #Almanzo100 with the #LovestarFactoryTeam PC: @agonz21</small>
-                           </div>
-                           <img src="../lsphotos/image000578.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000579.jpg" title="Lots of ups today. #Almanzo100 #gravelgrinder #cycling #bicycle #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lots of ups today. #Almanzo100 #gravelgrinder #cycling #bicycle #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000579.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
