--- a/instagram20.html
+++ b/instagram20.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000535.jpg" title="Crushing gravel. #Almanzo100 #lovestarfactoryteam #cycling #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Crushing gravel. #Almanzo100 #lovestarfactoryteam #cycling #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000535.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000577.jpg" title="Awesome day for Team Lovestar today at the #almanzo100. We all started together and all finished together. So proud of the crew!! #lovestarfactoryteam #superx" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Awesome day for Team Lovestar today at the #almanzo100. We all started together and all finished together. So proud of the crew!! #lovestarfactoryteam #superx</small>
+                           </div>
+                           <img src="../lsphotos/image000577.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000578.jpg" title="Had a great day crushing 100 miles of gravel at #Almanzo100 with the #LovestarFactoryTeam PC: @agonz21" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Had a great day crushing 100 miles of gravel at #Almanzo100 with the #LovestarFactoryTeam PC: @agonz21</small>
+                           </div>
+                           <img src="../lsphotos/image000578.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000579.jpg" title="Lots of ups today. #Almanzo100 #gravelgrinder #cycling #bicycle #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lots of ups today. #Almanzo100 #gravelgrinder #cycling #bicycle #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000579.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000580.jpg" title="huge kudos to the #lovestarfactoryteam #Almanzo100 contingent, the whole group agreed to ride a no-drop century today. It was a long and challenging ride, but every rider finished. Epic views & epic friends. #gravelgrinder #cycling #bicycle" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -211,58 +263,6 @@ So many cool #fog photos this morning... #cycling #moots #bicycle #lovestarfacto
                               <small>Great early ride with @agonz21 #cycling #bikechi #lovestarfactoryteam #bicycle</small>
                            </div>
                            <img src="../lsphotos/image000592.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000593.jpg" title="Sunrise ride. #moots #parlee #cycling #lovestarfactoryteam #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunrise ride. #moots #parlee #cycling #lovestarfactoryteam #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000593.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000135.jpg" title="Repost from @oliviabeaty ...great shot of her custom #lovestarbicyclebags SaddlePack and all sorts of color match goodness. #handmade #bicyclebag #cycling #custom #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Repost from @oliviabeaty ...great shot of her custom #lovestarbicyclebags SaddlePack and all sorts of color match goodness. #handmade #bicyclebag #cycling #custom #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000135.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000136.jpg" title="@agonz21 crushing cafe sprints this morning. #lovestarbicyclebags #lovestarfactoryteam #cycling #parlee #parleecycles #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>@agonz21 crushing cafe sprints this morning. #lovestarbicyclebags #lovestarfactoryteam #cycling #parlee #parleecycles #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000136.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000137.jpg" title="#lovestarbicyclebags Shop apron / snack dispenser. #shoplife" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#lovestarbicyclebags Shop apron / snack dispenser. #shoplife</small>
-                           </div>
-                           <img src="../lsphotos/image000137.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
