--- a/instagram25.html
+++ b/instagram25.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000177.jpg" title="Sunshine & warmer temps today! Getting in a quick spin before the snow comes back. #cycling #bikewinter #moots #lovestarfactoryteam #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunshine & warmer temps today! Getting in a quick spin before the snow comes back. #cycling #bikewinter #moots #lovestarfactoryteam #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000177.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000631.jpg" title="Some very Belgian weather this afternoon. #cycling #bikewinter #moots #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Some very Belgian weather this afternoon. #cycling #bikewinter #moots #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000631.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000632.jpg" title="Today. #cycling #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Today. #cycling #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000632.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000633.jpg" title="Putting in some miles on a gorgeous morning. #cycling #bikewinter #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Putting in some miles on a gorgeous morning. #cycling #bikewinter #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000633.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000634.jpg" title="Getting a little rad on today's Goonies ride.  #fatbike #bikewinter #lovestarfactoryteam #cycling " rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>#lovestarfactoryteam Rollin' fat into the coffee shop. #fatbike #bikewinter #cycling #2fat2furious #stupidcarruinedmypicture </small>
                            </div>
                            <img src="../lsphotos/image000635.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000636.jpg" title="Cold maiden voyage for a teammate's fatbike this morning. #2fat2furious #fatbike #lovestarfactoryteam #bikewinter #cycling " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Cold maiden voyage for a teammate's fatbike this morning. #2fat2furious #fatbike #lovestarfactoryteam #bikewinter #cycling </small>
-                           </div>
-                           <img src="../lsphotos/image000636.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000637.jpg" title="Winter bike bonanza! #lsb #lovestarfactoryteam #itsnotthatcold" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Winter bike bonanza! #lsb #lovestarfactoryteam #itsnotthatcold</small>
-                           </div>
-                           <img src="../lsphotos/image000637.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000192.jpg" title="Ravines = Illinois elevation. #fatbike #bikewinter #lovestarbicyclebags #bikepackingbags #bikepacking " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Ravines = Illinois elevation. #fatbike #bikewinter #lovestarbicyclebags #bikepackingbags #bikepacking </small>
-                           </div>
-                           <img src="../lsphotos/image000192.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000193.jpg" title="Powder & negative temps for this morning's commute. #fatbike #bikewinter #lovestarbicyclebags #bikepackingbags #bikepacking " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Powder & negative temps for this morning's commute. #fatbike #bikewinter #lovestarbicyclebags #bikepackingbags #bikepacking </small>
-                           </div>
-                           <img src="../lsphotos/image000193.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
