--- a/instagram3.html
+++ b/instagram3.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000945.jpg" title="Hello old friend 🚲❤️#bicycle #cycling #adventurebike #moots #psychloX #cyclocross #cx #cxiscoming #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Hello old friend 🚲❤️#bicycle #cycling #adventurebike #moots #psychloX #cyclocross #cx #cxiscoming #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000945.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000942.jpg" title="Before & After. #almanzo100 #failmanzo100 #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>Before & After. #almanzo100 #failmanzo100 #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000942.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000939.jpg" title="So proud of this guy (and the rest of the #lovestarraceclub crew!) who braved The Almonzo100 race today in driving rain, 20+ mph winds, and 33 degrees in Spring Valley, Minnesota. Enjoy those recovery beers as you plan your next adventure!!! #cycling #lovestarfactoryteam #cyclocross #lovestarraceclub #almonzo100 #mudsweatandgears #adventurebike #elliotlovestarbicycles #lovestar #elliotlovestarbicyclebags #proudofyouson" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>So proud of this guy (and the rest of the #lovestarraceclub crew!) who braved The Almonzo100 race today in driving rain, 20+ mph winds, and 33 degrees in Spring Valley, Minnesota. Enjoy those recovery beers as you plan your next adventure!!! #cycling #lovestarfactoryteam #cyclocross #lovestarraceclub #almonzo100 #mudsweatandgears #adventurebike #elliotlovestarbicycles #lovestar #elliotlovestarbicyclebags #proudofyouson</small>
+                           </div>
+                           <img src="../lsphotos/image000939.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000941.jpg" title="🚲🚲🚲#lovestarraceclub #mudsweatandgears #adventurebike #gravel #cyclocross #bicycle #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>🚲🚲🚲#lovestarraceclub #mudsweatandgears #adventurebike #gravel #cyclocross #bicycle #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000941.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000940.jpg" title="Driving Rain. Sustained 20+ mph winds. Real feel temperature of 33 degrees at the start line. #Almanzo100 2017 defeated me & the rest of our #lovestarraceclub crew. Time to have some recovery beers and plan our next adventure. #cycling #gravelgrinder #bicycle #cyclocross #gravel #adventurebike #doepicshit #mudsweatandgears" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -209,58 +261,6 @@
                               <small>#lovestarraceclub send-off ride for @piliu7 - come back from CA and crush us on the hills soon!!</small>
                            </div>
                            <img src="../lsphotos/image000925.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000923.jpg" title="#lovestarraceclub fairwell ride to @piliu7 as she heads west for new adventures. #cycling #bicycle #clubride #coffeeride" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#lovestarraceclub fairwell ride to @piliu7 as she heads west for new adventures. #cycling #bicycle #clubride #coffeeride</small>
-                           </div>
-                           <img src="../lsphotos/image000923.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000922.jpg" title="Singlespeed singletrack shredder. #mtb #dadlife #mountainbiking #clearybikes #adventuredad #raisingstronggirls #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Singlespeed singletrack shredder. #mtb #dadlife #mountainbiking #clearybikes #adventuredad #raisingstronggirls #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000922.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000921.jpg" title="Took #BabySNUB out for her first day of #sıngletrack .... she's already dreaming big. #cycling #bicycle #adventuredad #lilshredder #dadlife #mtb #mountainbiking #clearybikes #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Took #BabySNUB out for her first day of #sıngletrack .... she's already dreaming big. #cycling #bicycle #adventuredad #lilshredder #dadlife #mtb #mountainbiking #clearybikes #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000921.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000920.jpg" title="A little Giro inspiration. #giro #giroditalia #cycling #bicycle #bicyclebag #lovestarbicyclebags #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>A little Giro inspiration. #giro #giroditalia #cycling #bicycle #bicyclebag #lovestarbicyclebags #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000920.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
