--- a/instagram34.html
+++ b/instagram34.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000272.jpg" title="Bluffs of Lake Michigan. #fatbike #cycling #bikechi #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Bluffs of Lake Michigan. #fatbike #cycling #bikechi #bikepacking #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000272.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000709.jpg" title="Today was a rather sobering reminder that #cyclocross is really coming... #cx #moots #psychloX #cycling #bikechi #lovestarfactoryteam #HACCXE" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Today was a rather sobering reminder that #cyclocross is really coming... #cx #moots #psychloX #cycling #bikechi #lovestarfactoryteam #HACCXE</small>
+                           </div>
+                           <img src="../lsphotos/image000709.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000710.jpg" title="@casadewaggoner keeping it tight in the corners at the #HACCXE race today. #cyclocross #lovestarfactoryteam #cx #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>@casadewaggoner keeping it tight in the corners at the #HACCXE race today. #cyclocross #lovestarfactoryteam #cx #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000710.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000273.jpg" title="Don't ever back down... #fatbike #bikecommute #bicyclebag #cycling #cyclist #lovestarbicyclebags #bikechi #suburbangraffiti" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Don't ever back down... #fatbike #bikecommute #bicyclebag #cycling #cyclist #lovestarbicyclebags #bikechi #suburbangraffiti</small>
+                           </div>
+                           <img src="../lsphotos/image000273.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000711.jpg" title="Sunset Ride was a much needed mental and emotional break after the chaos of moving this past weekend. Living with two kids out of cardboard boxes in a new space required some serious big ring therapy. #cycling #cyclist #moots #psychloX #bikechi #lovestarfactoryteam #bicycle #sunset #dadlife" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -211,58 +263,6 @@ Another shot from my ride home tonight... #lovestarbicyclebags #fatbike #cycling
                               <small>Bike commuting for the last 8+ years, I've developed pretty thick skin when it comes to driver road rage. But some days, it can still just set you off in a way that threatens to ruin a ride. One of the benefits of commuting via fat bike, is that you can turn off the route and explore less travelled pathways...today's exploring turned a seething road rage ride into a relaxed & scenic adventure. Life is too short to let others ruin the things you love...so here's to the road less travelled. #bikecommute #fatbike #bikechi #bicycle #cyclist #cycling #lovestarbicyclebags #lovestarfactoryteam #framebag #bikepacking #adventurebike</small>
                            </div>
                            <img src="../lsphotos/image000282.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000283.jpg" title="Color matching on my commute today is on fleek. #ijustsaidfleek #cycling #lovestarfactoryteam #lovestarbicyclebags #fatbike #bikecommute #bikechi #bikepacking" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Color matching on my commute today is on fleek. #ijustsaidfleek #cycling #lovestarfactoryteam #lovestarbicyclebags #fatbike #bikecommute #bikechi #bikepacking</small>
-                           </div>
-                           <img src="../lsphotos/image000283.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000284.jpg" title="Fat bike family adventures. #fatbike #adventuredad #bikepacking #framebag #lovestarbicyclebags #thulechariot #lakemichigan #Chicago #cycling #cyclist" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fat bike family adventures. #fatbike #adventuredad #bikepacking #framebag #lovestarbicyclebags #thulechariot #lakemichigan #Chicago #cycling #cyclist</small>
-                           </div>
-                           <img src="../lsphotos/image000284.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000285.jpg" title="Late night miles along Lake Michigan... #fatbike #lakemichigan #Chicago #cycling #cyclist #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Late night miles along Lake Michigan... #fatbike #lakemichigan #Chicago #cycling #cyclist #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000285.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000718.jpg" title="#cycling #ladiesoflovestar #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>#cycling #ladiesoflovestar #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000718.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
