--- a/instagram35.html
+++ b/instagram35.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000283.jpg" title="Color matching on my commute today is on fleek. #ijustsaidfleek #cycling #lovestarfactoryteam #lovestarbicyclebags #fatbike #bikecommute #bikechi #bikepacking" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Color matching on my commute today is on fleek. #ijustsaidfleek #cycling #lovestarfactoryteam #lovestarbicyclebags #fatbike #bikecommute #bikechi #bikepacking</small>
+                           </div>
+                           <img src="../lsphotos/image000283.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000284.jpg" title="Fat bike family adventures. #fatbike #adventuredad #bikepacking #framebag #lovestarbicyclebags #thulechariot #lakemichigan #Chicago #cycling #cyclist" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fat bike family adventures. #fatbike #adventuredad #bikepacking #framebag #lovestarbicyclebags #thulechariot #lakemichigan #Chicago #cycling #cyclist</small>
+                           </div>
+                           <img src="../lsphotos/image000284.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000285.jpg" title="Late night miles along Lake Michigan... #fatbike #lakemichigan #Chicago #cycling #cyclist #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Late night miles along Lake Michigan... #fatbike #lakemichigan #Chicago #cycling #cyclist #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000285.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000718.jpg" title="#cycling #ladiesoflovestar #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>#cycling #ladiesoflovestar #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000718.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000719.jpg" title="Big mountain riding. #babysnub #babyGnar #lovestarfactoryteam #cyclist #futurecyclist #littleshredder #bigsky #cycling" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,66 +259,6 @@
                               <small>Big bird, big tires...happy Friday! #fatbikefriday #fatbike #bicycle #cycling #lovestarfactoryteam #bikechi #lovestarbicyclebags #handmade #bikepacking #framebag #seatbag #bicyclebag</small>
                            </div>
                            <img src="../lsphotos/image000290.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000730.jpg" title="#babysnub shreddin' the bike lane. #cycling #lovestarfactoryteam #futurecyclist #bicycle #striderbikes #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#babysnub shreddin' the bike lane. #cycling #lovestarfactoryteam #futurecyclist #bicycle #striderbikes #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000730.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000291.jpg" title="#Repost @elliotlovestarbicycles with @repostapp.
-・・・
-Some muddy #lovestarbicyclebags product testing. #handmade #bicyclebag #fatbike #bikechi #bicycle #cycling #framebag #bikepacking #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>fatbikee</h4>
-                              <small>#Repost @elliotlovestarbicycles with @repostapp.
-・・・
-Some muddy #lovestarbicyclebags product testing. #handmade #bicyclebag #fatbike #bikechi #bicycle #cycling #framebag #bikepacking #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000291.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000292.jpg" title="Some muddy #lovestarbicyclebags product testing. #handmade #bicyclebag #fatbike #bikechi #bicycle #cycling #framebag #bikepacking #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Some muddy #lovestarbicyclebags product testing. #handmade #bicyclebag #fatbike #bikechi #bicycle #cycling #framebag #bikepacking #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000292.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000293.jpg" title="#Repost @elliotlovestarbicycles with @repostapp.
-・・・
-Added a custom #lovestarbicyclebags top tube bag to this #bikepacking set up. #fatbike #cyclist #bicycle #cycling #bicyclebag #handmade #framebag #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>fatbikee</h4>
-                              <small>#Repost @elliotlovestarbicycles with @repostapp.
-・・・
-Added a custom #lovestarbicyclebags top tube bag to this #bikepacking set up. #fatbike #cyclist #bicycle #cycling #bicyclebag #handmade #framebag #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000293.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
