--- a/instagram48.html
+++ b/instagram48.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000503.jpg" title="Waffle Ride! 60 miles, 1 tricky flat, 4 killer waffles. #delbescorner #cycling #bikechi #bikeevanston #lovestarbicyclebags #waffles" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Waffle Ride! 60 miles, 1 tricky flat, 4 killer waffles. #delbescorner #cycling #bikechi #bikeevanston #lovestarbicyclebags #waffles</small>
+                           </div>
+                           <img src="../lsphotos/image000503.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000504.jpg" title="New tires...#gravelgrinder #clement #moots #lovestarbicyclebags #psychloX" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>New tires...#gravelgrinder #clement #moots #lovestarbicyclebags #psychloX</small>
+                           </div>
+                           <img src="../lsphotos/image000504.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000505.jpg" title="Ride wallet prototype 2.0 #cycling #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Ride wallet prototype 2.0 #cycling #bikechi #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000505.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000506.jpg" title="Finished up a custom Lovestar frame bag for a Chicago customer. Hi-vis orange XPac sidewalls, waterproof zippers, dark orange Cordura edges, yellow interior. #bikepacking #bikechi #cycling #handmade #framebag #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a custom Lovestar frame bag for a Chicago customer. Hi-vis orange XPac sidewalls, waterproof zippers, dark orange Cordura edges, yellow interior. #bikepacking #bikechi #cycling #handmade #framebag #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000506.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000507.jpg" title="Time to call it a night...made some good progress on this custom Lovestar Frame bag. #handmade #cycling #bikepacking #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>First step was relatively simple... #lovestarbicyclebags #handmade #bikechi #hivis</small>
                            </div>
                            <img src="../lsphotos/image000522.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000523.jpg" title="Sketchy beginnings... #lovestarbicyclebags #handmade #bikepacking #gravelgrinder" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sketchy beginnings... #lovestarbicyclebags #handmade #bikepacking #gravelgrinder</small>
-                           </div>
-                           <img src="../lsphotos/image000523.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000524.jpg" title="A good morning preview of my latest project. This set of matching bags (there will be a frame bag too) will be traveling to the Almanzo 100 in all of its rad-ness. #lovestarbicyclebags #bikechi #almanzo100 #gravel #bikepacking #handmade #ineedsunglasses" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>A good morning preview of my latest project. This set of matching bags (there will be a frame bag too) will be traveling to the Almanzo 100 in all of its rad-ness. #lovestarbicyclebags #bikechi #almanzo100 #gravel #bikepacking #handmade #ineedsunglasses</small>
-                           </div>
-                           <img src="../lsphotos/image000524.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000525.jpg" title="Prototype gas tank bag... #lovestarbicyclebags #handmade #blackisboring" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Prototype gas tank bag... #lovestarbicyclebags #handmade #blackisboring</small>
-                           </div>
-                           <img src="../lsphotos/image000525.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000526.jpg" title="If you're riding tubulars, a compact secure storage for a spare can be tough to come by. Check out the latest Lovestar Bicycle Bags prototype! #tubulars #lovestarbicyclebags #bikechi #pinstripes #handmade" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>If you're riding tubulars, a compact secure storage for a spare can be tough to come by. Check out the latest Lovestar Bicycle Bags prototype! #tubulars #lovestarbicyclebags #bikechi #pinstripes #handmade</small>
-                           </div>
-                           <img src="../lsphotos/image000526.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
