--- a/instagram7.html
+++ b/instagram7.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000863.jpg" title="@elliotlovestarbicycles going the distance to get the shot he wants. #lovestarraceclub #fatbike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>@elliotlovestarbicycles going the distance to get the shot he wants. #lovestarraceclub #fatbike</small>
+                           </div>
+                           <img src="../lsphotos/image000863.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000856.jpg" title="Trails and Sunshine. #snowbike #bikechi #bikewinter #bicycle #cycling #fatbike #bikepacking #lovestarbicyclebags #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Trails and Sunshine. #snowbike #bikechi #bikewinter #bicycle #cycling #fatbike #bikepacking #lovestarbicyclebags #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000856.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000864.jpg" title="Elliot shredding, deer peeping, fatty resting, and Birthday Boy Posing on Dave's Bday Lagoons Ride #lovestarraceclub #stillinhis30s" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Elliot shredding, deer peeping, fatty resting, and Birthday Boy Posing on Dave's Bday Lagoons Ride #lovestarraceclub #stillinhis30s</small>
+                           </div>
+                           <img src="../lsphotos/image000864.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000865.jpg" title="@agonz21 shredding this morning. #lovestarraceclub #fatbike #cycling #bicycle #bikewinter #bikechi #snowbike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>@agonz21 shredding this morning. #lovestarraceclub #fatbike #cycling #bicycle #bikewinter #bikechi #snowbike</small>
+                           </div>
+                           <img src="../lsphotos/image000865.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000866.jpg" title="Breaking trail through 7-8&quot; of fresh powder before dawn this morning. Snap credit to @agonz21 #adventurebike #bikewinter #bicycle #cycling #fatbike #bikepacking #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Reflections of donuts. #lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image000847.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000843.jpg" title="Oasis. 🌴🌊🌴#cycling #cyclocross #bicycle #palmdesert #cannondale #ridecannondale #superX #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Oasis. 🌴🌊🌴#cycling #cyclocross #bicycle #palmdesert #cannondale #ridecannondale #superX #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000843.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000841.jpg" title="🚲🍩 #bicycle #cycling #donutride #palmdesert #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>🚲🍩 #bicycle #cycling #donutride #palmdesert #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000841.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000842.jpg" title="Long shadows. #palmdesert #lovestarraceclub #cycling #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Long shadows. #palmdesert #lovestarraceclub #cycling #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000842.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000840.jpg" title="🐶🚲😳When a big ole German Shepard charged out of it's yard and started chasing me down the road, my legs were suddenly like &quot;Hey, we're not tired anymore.&quot; #bicycle #cycling #palmdesert #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>🐶🚲😳When a big ole German Shepard charged out of it's yard and started chasing me down the road, my legs were suddenly like "Hey, we're not tired anymore." #bicycle #cycling #palmdesert #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000840.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
