--- a/instagram8.html
+++ b/instagram8.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000843.jpg" title="Oasis. 🌴🌊🌴#cycling #cyclocross #bicycle #palmdesert #cannondale #ridecannondale #superX #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Oasis. 🌴🌊🌴#cycling #cyclocross #bicycle #palmdesert #cannondale #ridecannondale #superX #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000843.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000841.jpg" title="🚲🍩 #bicycle #cycling #donutride #palmdesert #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>🚲🍩 #bicycle #cycling #donutride #palmdesert #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000841.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000842.jpg" title="Long shadows. #palmdesert #lovestarraceclub #cycling #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Long shadows. #palmdesert #lovestarraceclub #cycling #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000842.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000840.jpg" title="🐶🚲😳When a big ole German Shepard charged out of it's yard and started chasing me down the road, my legs were suddenly like &quot;Hey, we're not tired anymore.&quot; #bicycle #cycling #palmdesert #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>🐶🚲😳When a big ole German Shepard charged out of it's yard and started chasing me down the road, my legs were suddenly like "Hey, we're not tired anymore." #bicycle #cycling #palmdesert #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000840.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000839.jpg" title="🚲🌵🗻 #bicycle #cycling #palmdesert #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,60 +259,6 @@
                               <small>Swim Lesson Commute. #cycling #bicycle #bikewinter #lovestarbicyclebags #bikecommute #clearybikes #pogies #lilshredder</small>
                            </div>
                            <img src="../lsphotos/image000825.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000823.jpg" title="Reflections. #lovestarraceclub #fatbike #bikewinter #cycling #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Reflections. #lovestarraceclub #fatbike #bikewinter #cycling #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000823.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000822.jpg" title="🚲❄️🌅 #lovestarraceclub #fatbike #bikewinter #cycling #bicycle #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>🚲❄️🌅 #lovestarraceclub #fatbike #bikewinter #cycling #bicycle #bikepacking #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000822.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000819.jpg" title="Wake up before the sun, check the weather... oh yeah, it's a great day for a ride for #lovestarraceclub Props to @elliotlovestarbicycles and FlashGordon for coming out too, we just didn't take a picture earlier cuz our fingers were too frozen..." rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Wake up before the sun, check the weather... oh yeah, it's a great day for a ride for #lovestarraceclub Props to @elliotlovestarbicycles and FlashGordon for coming out too, we just didn't take a picture earlier cuz our fingers were too frozen...</small>
-                           </div>
-                           <img src="../lsphotos/image000819.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000820.jpg" title="Single digit road ride this morning. #icebeard glory...
-#lovestarraceclub #bikewinter #cycling #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Single digit road ride this morning. #icebeard glory...
-#lovestarraceclub #bikewinter #cycling #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000820.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
